fix squished letters

--- a/css/_sass/essay.scss
+++ b/css/_sass/essay.scss
@@ -229,7 +229,7 @@ $anchorOffset: 64px;
   font-family: $headingFont;
   font-size: ms(2);
   font-weight: 700;
-  letter-spacing: -0.02em;
+  letter-spacing: 0em;
   position: relative;
   color: $primaryExtraDark;
 
